# kor-travel-map

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SKILL.md  WSL_KRADDR_GEO_DEBUG_UI.md  alembic.ini  antigravity.json  claude.json  docker-compose.external-db.yml  docker-compose.external-infra.yml  docker-compose.external-object-store.yml  docker-compose.host.yml  docker-compose.yml  kor-travel-map-spec.docx  opencode.json  package-lock.json  package.json  pyproject.toml
.claude/agents/: README.md  api-designer.md  backend-developer.md  frontend-developer.md  mobile-developer.md  ui-designer.md
.codex/: config.toml
.gemini/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  frontend.yml  lint.yml  openapi.yml
.opencode/agent/: api-designer.md  backend-developer.md  frontend-developer.md  mobile-developer.md  ui-designer.md  ui-fixer.md
alembic/: env.py
alembic/versions/: 0001_initial_schemas_and_extensions.py  0002_features_and_source_tables.py  0003_feature_consistency_reports.py  0004_fix_source_links_role_check.py  0005_dedup_review_queue.py  0006_import_jobs.py  0007_feature_merge_history.py  0008_feature_update_requests.py  0009_phase2_ops_tables.py  0010_feature_overrides.py  0011_offline_uploads.py  0012_import_jobs_batch_columns.py  0013_dedup_pair_order_invariant.py  0014_uuid_default_schema.py  0015_feature_coord_precision.py  0016_offline_upload_idempotency.py  0017_feature_weather_values.py  0018_ops_logs.py  0019_enrichment_review_queue.py  0020_t212d_perf_keyset_indexes.py  0021_user_feature_versions.py  0022_pg_prewarm_extension.py  0023_t216f_rest_naming_convergence.py  0024_import_job_events.py  0025_curated_features_overlay.py  0026_curated_copy_snapshots.py  0027_khoa_recategorize_cleanup.py  0028_admin_auth_and_public_api_keys.py  0029_weather_metric_feature_idx.py  0030_khoa_rekey_hardening.py  0031_concierge_curated_source.py  0032_curated_pinvi_rename.py  0033_pinvi_poi_cache_metadata.py  0034_feature_price_values.py  0034_generic_curated_contract.py  0035_merge_generic_curated_and_price.py  0035_merge_price_and_curated.py  0036_merge_price_merge_aliases.py  0037_dagster_schedule_overrides.py  0038_source_record_last_seen.py  (+1 more)
docker/: api-entrypoint.sh  api.Dockerfile  dagster.Dockerfile  dagster.yaml  frontend.Dockerfile
docker/rustfs/: .env.example  README.md  docker-compose.yml
docs/: address-geocoding.md  admin-ui-modernization-gap-audit.md  adr045-open-decisions.md  adr045-standalone-plan.md  agent-guide.md  airkorea-feature-etl.md  architecture.md  backend-package.md  backup-restore.md  category.md  codegraph-worktree.md  curated-features.md  dagster-boundary.md  data-model.md  debug-fixture-workflow.md  debug-ui-admin-workflows.md  debug-ui-package.md  decisions.md  deploy.md  dev-environment.md  event-feature-etl.md  external-apis.md  feature-db-initialization.md  feature-docs-guide.md  feature-files-rustfs.md  feature-model.md  feature-opening-hours.md  forest-feature-etl.md  integration-map.md  journal.md  kasi-compatibility.md  khoa-beach-info-etl.md  kma-weather-etl.md  knps-feature-etl.md  kraddr-base-types.md  krairport-feature-etl.md  krex-rest-area-feature-etl.md  krheritage-feature-etl.md  krmois-license-feature-etl.md  mcst-feature-etl.md  (+28 more)
docs/adr/: 001-v1-branch-preserve-main-orphan-v2.md  002-dependency-layer-enforcement-async-only.md  003-tripmate-library-function-call-no-rest.md  004-orm-mapping-only-raw-sql-text.md  005-debug-rest-api-no-auth-internal-only.md  007-dependency-stack-postgres-postgis-sqlalchemy.md  008-postgis-extension-x-extension-schema.md  009-deterministic-feature-id.md  010-weather-forecast-style-timeline-bucket-split.md  011-import-jobs-advisory-lock-skip-locked.md  013-bulk-insert-psycopg-copy-30k-margin.md  014-test-four-tiers-coverage-targets.md  015-object-store-s3-compatible-rustfs-first.md  016-record-linkage-weights-thresholds.md  017-retention-policy.md  018-feature-detail-no-free-dict-detail-models.md  020-debug-admin-ui-separate-python-package.md  022-krtour-namespace-import-path-kortravelmap.md  023-kraddr-base-category-module-move.md  024-canonical-provider-name-python-mois-api.md  025-debug-ui-frontend-maplibre-vworld-js.md  026-tripmate-user-ui-maplibre-vworld.md  027-forest-category-expansion.md  028-python-knps-api-provider-registration.md  029-map-marker-react-npm-package-extraction.md  031-openapi-export-policy-first-router.md  032-coverage-stepwise-schedule.md  033-feature-consistency-reports-phased.md  034-provider-implementation-order-mois-last.md  035-debug-admin-api-production-admin-ui.md  036-maplibre-vworld-js-library-split.md  037-admin-ui-frontend-state-tanstack-query-zustand.md  038-github-actions-ci-cd-reactivation.md  040-backup-restore-hot-swap-ui.md  041-absorb-kraddr-base-deprecate.md  042-datagokr-standard-data-primary-source.md  043-map-marker-react-npm-publish-withheld.md  044-local-first-library-lookup.md  045-docker-standalone-program-tripmate-openapi.md  046-no-compat-shim-geo-rest-v2.md  (+15 more)
docs/architecture/: address-geocoding.md  admin-frontend-design-rules.md  architecture.md  backend-package.md  category.md  (+15 more)
live-e2e-backup-runner/: README.md  backup.sh  restore.sh  swap.sh
scripts/: check_journal_update.py  check_prod_redaction.py  docker-backup.sh  docker-build.sh  docker-buildx.sh  docker-restore-swap.sh  docker-restore-verify.sh  docker-restore.sh  docker-up.sh  load-env.sh  mcp_telegram_start.py  preflight-ports.sh  run-admin-stack.sh  run-precommit-check.sh  stop-fixed-ports.sh  with-pg-advisory-lock.py
tests/: conftest.py  runners.py  test_addressing.py  test_beaches.py  test_dagster_contract.py  test_datagokr.py  test_db.py  test_debug_api.py  test_events.py  test_files.py  test_fixtures.py  test_forest_highways.py  test_generated_fixtures.py  test_heritage.py  test_ids.py  test_krmois.py  test_models.py  test_notices.py  test_opinet.py  test_places.py  test_standard_data.py  test_store.py  test_weather.py
(+452 files in other folders)
