[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-krtour-map"
version = "0.2.0-dev"
description = "TripMate map feature aggregation and CRUD contracts (v2 design stage)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "digitie" }]
keywords = ["tripmate", "map", "features", "korea", "travel", "postgis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
# v2 м„Өкі„ лӢЁкі„ вҖ” dependenciesлҠ” мҪ”л“ң мһ‘м„ұ лӢЁкі„м—җм„ң ADRкіј н•Ёк»ҳ нҷ•м •.
# м•„лһҳлҠ” ADR-007/008/...м—җм„ң н•©мқҳлҗң 1м°Ё мҠӨнғқмқҳ placeholder.
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "geoalchemy2>=0.15",
  "asyncpg>=0.29",
  "psycopg[binary,pool]>=3.2",
  "shapely>=2.0",
  "pyproj>=3.6",  # ADR-012 мўҢн‘ң ліҖнҷҳ / ADR-030 narrow cache singleton
  "alembic>=1.13",  # ADR-007 schema migration
  "jellyfish>=1.0",  # ADR-016 Record Linkage (jaro_winkler_similarity)
  "boto3>=1.34",  # ADR-015 S3 нҳёнҷҳ к°қмІҙ м ҖмһҘмҶҢ(RustFS/MinIO/R2)
]

# CLI entry-point (ADR-022 вҖ” лӘ…л № мқҙлҰ„ `krtour-map`, ADR-039 mutex).
[project.scripts]
krtour-map = "krtour.map.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "import-linter>=2.0",
  "testcontainers[postgres]>=4",
  "vcrpy>=6",
  "coverage>=7",
  # geocoding.pyлҠ” httpxлҘј TYPE_CHECKING-onlyлЎң import (лҹ°нғҖмһ„ мқҳмЎҙ м•„лӢҳ,
  # нҳём¶ңмһҗ мЈјмһ… вҖ” ADR-006/044). mypy --strictк°Җ stubлҘј м°ҫлҸ„лЎқ devм—җл§Ң л‘”лӢӨ.
  "httpx>=0.27",
]
# л””лІ„к·ё REST API/UIлҠ” лі„лҸ„ нҢЁнӮӨм§ҖлЎң л¶„лҰ¬ (ADR-020):
#   `packages/krtour-map-admin/`. FastAPI/Uvicorn мқҳмЎҙм„ұмқҖ кұ°кё° мһҲлӢӨ.
geo = [
  "geopandas>=1.0",
  "gdal==3.8.4",  # Python bindingмқҖ мӢңмҠӨн…ң libgdal ABIмҷҖ patch лІ„м „к№Ңм§Җ л§һм¶Ө
]
providers = [
  # provider лқјмқҙлёҢлҹ¬лҰ¬лҠ” git URL + commit sha н•Җ (мҪ”л“ң мһ‘м„ұ лӢЁкі„м—җм„ң ADRкіј н•Ёк»ҳ нҷ•м •).
  # ліё лқјмқҙлёҢлҹ¬лҰ¬лҠ” wrapper/adapter мғқм„ұ кёҲм§Җ (ADR-006) вҖ” provider client м§Ғм ‘ мӮ¬мҡ©.
  # ліё лқјмқҙлёҢлҹ¬лҰ¬ мҪ”л“ңм—җм„ңлҠ” `Protocol`лЎң мһ…л Ҙ shapeл§Ң м •мқҳ (лӘЁл“Ҳлі„ docstring м°ёмЎ°).
  # мғҒм„ё statusлҠ” `docs/provider-contract.md` В§12 н‘ң.
  #
  # в”Җв”Җ note: `python-kraddr-base`лҠ” ADR-041 (PR#37) нқЎмҲҳ мҷ„лЈҢ + archive нӣ„ліҙ.
  #    ліё libм—җ мқҳмЎҙм„ұ м—ҶмқҢ. в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  #
  # в”Җв”Җ мЈјмҶҢ/мўҢн‘ң ліҙк°• (on-demand) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # "python-kraddr-geo @ git+https://github.com/digitie/python-kraddr-geo.git@<sha>",
  #
  # в”Җв”Җ Sprint 2 В§2.1 вҖ” datagokr н‘ңмӨҖлҚ°мқҙн„° (м¶•м ң 1м°Ё, ADR-042) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # `krtour.map.providers.standard_data.CulturalFestivalItem` Protocol (PR#34) м •н•©.
  # "python-datagokr-api @ git+https://github.com/digitie/python-datagokr-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 2 В§2.2 вҖ” лӮ м”Ё (ADR-010) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # `krtour.map.providers.kma.{KmaShortForecastItem, KmaUltraShortNowcastItem}`
  # Protocol (PR#38/39) м •н•©.
  # "python-kma-api      @ git+https://github.com/digitie/python-kma-api.git@<sha>",
  # "python-airkorea-api @ git+https://github.com/digitie/python-airkorea-api.git@<sha>",
  # "python-khoa-api     @ git+https://github.com/digitie/python-khoa-api.git@<sha>",
  # python-krforest-apiлҠ” мӮ°м•…кё°мғҒ + Sprint 3 trails м–‘мӘҪ мӮ¬мҡ© (м•„лһҳ В§2.5мҷҖ лҸҷмқј lib).
  #
  # в”Җв”Җ Sprint 2 В§2.3 вҖ” opinet мң к°Җ (place + price) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # "python-opinet-api   @ git+https://github.com/digitie/python-opinet-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 2 В§2.4 вҖ” krex нңҙкІҢмҶҢ (multi-kind) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # "python-krex-api     @ git+https://github.com/digitie/python-krex-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 2 В§2.1 (enrichment 2м°Ё, ADR-042) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # visitkorea TourAPIлҠ” datagokr 1м°Ё sourceмқҳ enrichment (image/description/
  # contentId л§Өн•‘) мұ…мһ„ вҖ” Sprint 2 лҒқл¬ј PR.
  # "python-visitkorea-api @ git+https://github.com/digitie/python-visitkorea-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 3 вҖ” knps / krforest_trails / krheritage / krairport в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # python-knps-api: keyless file dataset client (ADR-028 + amendment 2026-05-25).
  # PR#4 (codex/keyless-file-download-dtos) merged вҶ’ ApiEndpoint/Page мӮӯм ң,
  # KNPS_SERVICE_KEY мӮ¬мҡ© м•Ҳ н•Ё. sha 06da125f.
  # `krtour.map.providers.knps.KnpsPointRecord` Protocol (Point/place 5 dataset
  # кө¬нҳ„лҗЁ). SHP(area)/routeлҠ” нӣ„мҶҚ. лӢӨлҘё providerмІҳлҹј ліё lib ліё мқҳмЎҙ X (Protocol).
  # "python-knps-api     @ git+https://github.com/digitie/python-knps-api.git@06da125f",
  # "python-krforest-api @ git+https://github.com/digitie/python-krforest-api.git@<sha>",
  # "python-krheritage-api @ git+https://github.com/digitie/python-krheritage-api.git@<sha>",
  # "python-krairport-api @ git+https://github.com/digitie/python-krairport-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 4 вҖ” MOIS мқён—Ҳк°Җ 4лӢЁкі„ (ADR-024) в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # "python-mois-api     @ git+https://github.com/digitie/python-mois-api.git@<sha>",
  # "python-kasi-api     @ git+https://github.com/digitie/python-kasi-api.git@<sha>",
  #
  # в”Җв”Җ Sprint 5 вҖ” л°•л¬јкҙҖ/лҜёмҲ кҙҖ / mcst enrichment / standard data в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
  # "python-mcst-api     @ git+https://github.com/digitie/python-mcst-api.git@<sha>",
  # data.go.kr-standard 5мў…мқҖ ліё лқјмқҙлёҢлҹ¬лҰ¬ + python-datagokr-api кІҪмң  (ADR-042).
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# PEP 420 implicit namespace `krtour` + л©”мқё нҢЁнӮӨм§Җ `krtour.map` (ADR-022).
# src/krtour/__init__.pyмқҖ мғқм„ұ кёҲм§Җ (ADR-022 В§кІ°кіј/л¶Җм • + SKILL.md DO NOT #21).
include = ["krtour.map*"]
namespaces = true

[tool.setuptools.package-data]
"krtour.map" = ["py.typed"]

# =============================================================================
# Lint / Type / Test
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PIE", "PT", "RET", "SIM", "TID"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
# ADR-022 вҖ” krtourлҠ” PEP 420 implicit namespaceмқҙлҜҖлЎң лӘ…мӢңм ҒмңјлЎң нҷңм„ұнҷ”.
# pip install -e . нӣ„м—җлҸ„ mypyлҠ” namespace packageлҘј мһҗлҸҷ мқёмӢқ лӘ»н•Ё.
# PR#35 (2026-05-27) вҖ” debug-ui нҢЁнӮӨм§Җк°Җ к°ҷмқҖ `krtour` namespaceлҘј кіөмң н•ҳлҜҖлЎң
# mypy_pathм—җ м„ё src нҠёлҰ¬ лӘЁл‘җ л“ұлЎқ.
namespace_packages = true
explicit_package_bases = true
mypy_path = "src:packages/krtour-map-admin/src:packages/krtour-map-dagster/src"

# shapelyлҠ” type stubлҘј м ңкіөн•ҳм§Җ м•ҠмқҢ (pyprojмҷҖ лӢ¬лҰ¬ py.typed м—ҶмқҢ).
# core/geometry.pyк°Җ WKT нҢҢмӢұВ·centroidм—җ мӮ¬мҡ© вҖ” import-untypedл§Ң л¬ҙмӢң.
[[tool.mypy.overrides]]
module = ["shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
# session-scope async fixture (pg_engine)мҷҖ function-scope async testк°Җ лҸҷмқј
# event loopмқ„ кіөмң н•ҙм•ј н•Ё вҖ” pytest-asyncio 0.23+ к¶ҢмһҘ м„Өм •. лҜём„Өм • мӢң testcontainers
# PostGIS нҶөн•© н…ҢмҠӨнҠём—җм„ң "Task got Future attached to a different loop" л°ңмғқ.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: лӢЁмң„ н…ҢмҠӨнҠё вҖ” DB м—Ҷмқҙ Fake repoл§Ң",
  "integration: нҶөн•© н…ҢмҠӨнҠё вҖ” testcontainers PostGIS н•„мҡ”",
  "e2e: л””лІ„к·ё API + integration DB",
  "slow: лҠҗлҰ° н…ҢмҠӨнҠё (CI nightly only)",
  "fixture_replay: replay fixture нҡҢк·Җ",
  "live: мҷёл¶Җ лқјмқҙлёҢ м„ңл№„мҠӨ нҳём¶ң(мҳҲ: kraddr-geo). лҸ„лӢ¬ л¶Ҳк°Җ мӢң мһҗлҸҷ skip.",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
source = ["src/krtour/map"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
fail_under = 80  # ADR-032 Sprint 4 bar (75вҶ’80 мғҒн–Ҙ, 2026-06-01 Sprint 4b мў…лЈҢ). мӢӨмёЎ 94.12%.
# ADR-032 Sprintлі„ fail_under schedule:
#   Sprint 1 (scaffolding):  fail_under = 50
#   Sprint 2 (core + 4 provider): 65
#   Sprint 3 (provider м Ҳл°ҳ + infra): 75
#   Sprint 4 (integrity + edge cases): 80   вҶҗ нҳ„мһ¬ (мӢӨмёЎ 94.12%лқј л¬ҙмң„н—ҳ мғҒн–Ҙ, Sprint 4b)
#   Sprint 5 (operational entry): 80 мң м§Җ + нҡҢк·Җ л°©м§Җ
# лӢЁкі„ мғҒн–Ҙ PRмқҖ л°ҳл“ңмӢң coverage gap н•ҙмҶҢ PRкіј л¬¶мқҢ (red main 0нҡҢ).
# dto/лҠ” Sprint 2л¶Җн„° 100% branch н•ӯмғҒ к°•м ң (лі„лҸ„ [tool.coverage.report.partial_branches]).

# =============================================================================
# import-linter (мқҳмЎҙ кі„мёө к°•м ң) вҖ” мҪ”л“ң мһ‘м„ұ лӢЁкі„ мӢңмһ‘ мӢң нҷңм„ұнҷ”
# =============================================================================

[tool.importlinter]
root_package = "krtour.map"
# forbidden contractsм—җ мҷёл¶Җ нҢЁнӮӨм§Җк°Җ нҸ¬н•ЁлҗЁ (fastapi/uvicorn/cachetools/kafka).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
# мқҳмЎҙ л°©н–Ҙ: category вҶ’ dto вҶ’ core вҶ’ infra вҶ’ providers вҶ’ geocoding вҶ’ client вҶ’ cli.
# krtour.map.cliлҠ” Sprint 4 В§2.8(ADR-039 CLI mutex)м—җм„ң м¶”к°Җ вҖ” мөңмғҒмң„ layer.
layers = [
  "krtour.map.cli",
  "krtour.map.client",
  "krtour.map.providers",
  "krtour.map.geocoding",
  "krtour.map.infra",
  "krtour.map.core",
  "krtour.map.dto",
  "krtour.map.category",
]

# л©”мқё нҢЁнӮӨм§Җ(krtour.map)лҠ” FastAPI/Uvicorn мқҳмЎҙмқ„ к°Җм ём„  м•Ҳ лҗңлӢӨ (ADR-020).
# л””лІ„к·ё RESTлҠ” packages/krtour-map-admin/(import: `krtour.map_admin`)м—җ мһҲлӢӨ.
[[tool.importlinter.contracts]]
name = "main package must not import fastapi/uvicorn"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "fastapi",
  "uvicorn",
  "starlette",
]

# ADR-030: лқјмқҙлёҢлҹ¬лҰ¬ in-memory мәҗмӢң кёҲм§Җ. functools.cache н•ңм • narrow мҳҲмҷёл§Ң н—Ҳмҡ©.
# мҷёл¶Җ мәҗмӢң лқјмқҙлёҢлҹ¬лҰ¬ мқҳмЎҙ кёҲм§Җ вҖ” invalidation мұ…мһ„ нҳём¶ңмһҗ(TripMate)м—җ мң„мһ„.
# мҳҲмҷё: PlaceCategoryCode м№ҙнғҲлЎңк·ё (krtour.map.category), pyproj.Transformer singleton.
[[tool.importlinter.contracts]]
name = "main package must not depend on cache libraries"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "cachetools",
  "async_lru",
  "aiocache",
  "diskcache",
]

# ADR-103 (T-103 ліҙлҘҳ): ліё лқјмқҙлёҢлҹ¬лҰ¬лҠ” Kafka/streaming consumer мқҳмЎҙ кёҲм§Җ.
# streaming лҸ„мһ… мӢң consumerлҠ” TripMate apps/etlк°Җ лӢҙлӢ№. ліё лқјмқҙлёҢлҹ¬лҰ¬лҠ” н•ЁмҲҳл§Ң.
[[tool.importlinter.contracts]]
name = "main package must not depend on kafka/streaming libraries"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "kafka",
  "aiokafka",
  "confluent_kafka",
  "faust",
]
