[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-krtour-map"
version = "0.2.0-dev"
description = "TripMate map feature aggregation and CRUD contracts (v2 design stage)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "digitie" }]
keywords = ["tripmate", "map", "features", "korea", "travel", "postgis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
# v2 설계 단계 — dependencies는 코드 작성 단계에서 ADR과 함께 확정.
# 아래는 ADR-007/008/...에서 합의된 1차 스택의 placeholder.
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "geoalchemy2>=0.15",
  "asyncpg>=0.29",
  "psycopg[binary,pool]>=3.2",
  "shapely>=2.0",
  "pyproj>=3.6",  # ADR-012 좌표 변환 / ADR-030 narrow cache singleton
  "alembic>=1.13",  # ADR-007 schema migration
  "jellyfish>=1.0",  # ADR-016 Record Linkage (jaro_winkler_similarity)
  "boto3>=1.34",  # ADR-015 S3 호환 객체 저장소(RustFS/MinIO/R2)
]

# CLI entry-point (ADR-022 — 명령 이름 `krtour-map`, ADR-039 mutex).
[project.scripts]
krtour-map = "krtour.map.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "import-linter>=2.0",
  "pre-commit>=3.7",
  "testcontainers[postgres]>=4",
  "vcrpy>=6",
  "coverage>=7",
  # geocoding.py는 httpx를 TYPE_CHECKING-only로 import (런타임 의존 아님,
  # 호출자 주입 — ADR-006/044). mypy --strict가 stub를 찾도록 dev에만 둔다.
  "httpx>=0.27",
]
# 디버그 REST API/UI는 별도 패키지로 분리 (ADR-020):
#   `packages/krtour-map-admin/`. FastAPI/Uvicorn 의존성은 거기 있다.
geo = [
  "geopandas>=1.0",
  "gdal==3.8.4",  # Python binding은 시스템 libgdal ABI와 patch 버전까지 맞춤
]
providers = [
  # provider 라이브러리는 git URL + commit sha 핀 (코드 작성 단계에서 ADR과 함께 확정).
  # 본 라이브러리는 wrapper/adapter 생성 금지 (ADR-006) — provider client 직접 사용.
  # 본 라이브러리 코드에서는 `Protocol`로 입력 shape만 정의 (모듈별 docstring 참조).
  # 상세 status는 `docs/provider-contract.md` §12 표.
  #
  # ── note: `python-kraddr-base`는 ADR-041 (PR#37) 흡수 완료 + archive 후보.
  #    본 lib에 의존성 없음. ─────────────────────────────────────────────────────
  #
  # ── 주소/좌표 보강 (on-demand) ─────────────────────────────────────────
  # "python-kraddr-geo @ git+https://github.com/digitie/python-kraddr-geo.git@<sha>",
  #
  # ── Sprint 2 §2.1 — datagokr 표준데이터 (축제 1차, ADR-042) ────────────
  # `krtour.map.providers.standard_data.CulturalFestivalItem` Protocol (PR#34) 정합.
  "python-datagokr-api @ git+https://github.com/digitie/python-datagokr-api.git@f88e62eb542be97432e41a11c91b81dc5dcc84a2",
  #
  # ── Sprint 2 §2.2 — 날씨 (ADR-010) ────────────────────────────────────
  # `krtour.map.providers.kma.{KmaShortForecastItem, KmaUltraShortNowcastItem}`
  # Protocol (PR#38/39) 정합. T-219b: Dagster asset이 KmaClient/grid/time_utils
  # 를 lazy import — runtime 의존 활성화. 006fdbe: datagokr result code 03
  # (NO_DATA)을 예외 대신 빈 결과로 정규화 (provider #18/PR#19 — T-212e 특보
  # rolling window 빈 구간 대응).
  "python-kma-api @ git+https://github.com/digitie/python-kma-api.git@006fdbef49ffa062c83d9bd89e85a6a99834367f",
  "python-airkorea-api @ git+https://github.com/digitie/python-airkorea-api.git@22996a457fa2c845101b0bbbf8167e655e8d562d",
  # khoa: snake_case live row 파싱 (khoa#5/PR#6).
  "python-khoa-api @ git+https://github.com/digitie/python-khoa-api.git@0ccb5ed90da5886a2d346b33f1019efd2719e0bc",
  # python-krforest-api는 산악기상 + Sprint 3 trails 양쪽 사용 (아래 §2.5와 동일 lib).
  #
  # ── Sprint 2 §2.3 — opinet 유가 (place + price) ───────────────────────
  "python-opinet-api @ git+https://github.com/digitie/python-opinet-api.git@bb6385caebe204b781a3ba9544efa04d5fe68671",
  #
  # ── Sprint 2 §2.4 — krex 휴게소 (multi-kind) ──────────────────────────
  # krex: incident → openapi/burstInfo/realTimeSms 재정렬 (krex PR#9, #378).
  "python-krex-api @ git+https://github.com/digitie/python-krex-api.git@2504a3608dec7535ec32ce983d13d5cbc1da27ae",
  #
  # ── Sprint 2 §2.1 (enrichment 2차, ADR-042) ───────────────────────────
  # visitkorea TourAPI는 datagokr 1차 source의 enrichment (image/description/
  # contentId 매핑) 책임 — Sprint 2 끝물 PR.
  "python-visitkorea-api @ git+https://github.com/digitie/python-visitkorea-api.git@cebf543d331423910cf7d2748c022665e538c201",
  #
  # ── Sprint 3 — knps / krforest_trails / krheritage / krairport ────────
  # python-knps-api: keyless file dataset client (ADR-028 + amendment 2026-05-25).
  # PR#4 (codex/keyless-file-download-dtos) merged → ApiEndpoint/Page 삭제,
  # KNPS_SERVICE_KEY 사용 안 함. sha 5e88fb4.
  # `krtour.map.providers.knps.KnpsPointRecord` Protocol (Point/place 5 dataset
  # 구현됨). SHP(area)/route는 후속. 다른 provider처럼 본 lib 본 의존 X (Protocol).
  "python-knps-api @ git+https://github.com/digitie/python-knps-api.git@5e88fb45fa3c4fe4858efedeb2be52f687e6b167",
  "python-krforest-api @ git+https://github.com/digitie/python-krforest-api.git@f9254e6bbb54f0a4f0fb7d85831f9adcdc318a3f",
  "python-krheritage-api @ git+https://github.com/digitie/python-krheritage-api.git@7dc46c31a7a8129c9698ec0a56df562dcb014ab2",
  "python-krairport-api @ git+https://github.com/digitie/python-krairport-api.git@b8854137f26be4ae14c1693b83b425ee37c60655",
  #
  # ── Sprint 4 — MOIS 인허가 4단계 (ADR-024) ────────────────────────────
  "python-mois-api @ git+https://github.com/digitie/python-mois-api.git@bc6f742feb8b6e28c9b889aa71a4cac9c489091c",
  # "python-kasi-api     @ git+https://github.com/digitie/python-kasi-api.git@<sha>",
  #
  # ── Sprint 5 — 박물관/미술관 / mcst enrichment / standard data ────────
  # T-220b: Dagster fetcher가 CultureOpenApiClient/DataGoFileApiClient를 lazy
  # import — runtime 의존 활성화 (origin/master d06e8d2).
  "python-mcst-api @ git+https://github.com/digitie/python-mcst-api.git@d06e8d2de1aac9eb336a711d4cacbaf0aa512d22",
  # data.go.kr-standard 5종은 본 라이브러리 + python-datagokr-api 경유 (ADR-042).
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# PEP 420 implicit namespace `krtour` + 메인 패키지 `krtour.map` (ADR-022).
# src/krtour/__init__.py은 생성 금지 (ADR-022 §결과/부정 + SKILL.md DO NOT #21).
include = ["krtour.map*"]
namespaces = true

[tool.setuptools.package-data]
"krtour.map" = ["py.typed"]

# =============================================================================
# Lint / Type / Test
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PIE", "PT", "RET", "SIM", "TID"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
# ADR-022 — krtour는 PEP 420 implicit namespace이므로 명시적으로 활성화.
# pip install -e . 후에도 mypy는 namespace package를 자동 인식 못함.
# PR#35 (2026-05-27) — debug-ui 패키지가 같은 `krtour` namespace를 공유하므로
# mypy_path에 세 src 트리 모두 등록.
namespace_packages = true
explicit_package_bases = true
mypy_path = "src:packages/krtour-map-admin/src:packages/krtour-map-dagster/src"

# shapely는 type stub를 제공하지 않음 (pyproj와 달리 py.typed 없음).
# core/geometry.py가 WKT 파싱·centroid에 사용 — import-untyped만 무시.
[[tool.mypy.overrides]]
module = ["shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
asyncio_mode = "auto"
# session-scope async fixture (pg_engine)와 function-scope async test가 동일
# event loop을 공유해야 함 — pytest-asyncio 0.23+ 권장 설정. 미설정 시 testcontainers
# PostGIS 통합 테스트에서 "Task got Future attached to a different loop" 발생.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: 단위 테스트 — DB 없이 Fake repo만",
  "integration: 통합 테스트 — testcontainers PostGIS 필요",
  "e2e: 디버그 API + integration DB",
  "slow: 느린 테스트 (CI nightly only)",
  "fixture_replay: replay fixture 회귀",
  "live: 외부 라이브 서비스 호출(예: kraddr-geo). 도달 불가 시 자동 skip.",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
source = ["src/krtour/map"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
fail_under = 80  # ADR-032 Sprint 4 bar (75→80 상향, 2026-06-01 Sprint 4b 종료). 실측 94.12%.
# ADR-032 Sprint별 fail_under schedule:
#   Sprint 1 (scaffolding):  fail_under = 50
#   Sprint 2 (core + 4 provider): 65
#   Sprint 3 (provider 절반 + infra): 75
#   Sprint 4 (integrity + edge cases): 80   ← 현재 (실측 94.12%라 무위험 상향, Sprint 4b)
#   Sprint 5 (operational entry): 80 유지 + 회귀 방지
# 단계 상향 PR은 반드시 coverage gap 해소 PR과 묶음 (red main 0회).
# dto/는 Sprint 2부터 100% branch 항상 강제 (별도 [tool.coverage.report.partial_branches]).

# =============================================================================
# import-linter (의존 계층 강제) — 코드 작성 단계 시작 시 활성화
# =============================================================================

[tool.importlinter]
root_package = "krtour.map"
# forbidden contracts에 외부 패키지가 포함됨 (fastapi/uvicorn/cachetools/kafka).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
# 의존 방향: category → dto → core → infra → providers → geocoding → client → cli.
# krtour.map.cli는 Sprint 4 §2.8(ADR-039 CLI mutex)에서 추가 — 최상위 layer.
layers = [
  "krtour.map.cli",
  "krtour.map.client",
  "krtour.map.providers",
  "krtour.map.geocoding",
  "krtour.map.infra",
  "krtour.map.core",
  "krtour.map.dto",
  "krtour.map.category",
]

# 메인 패키지(krtour.map)는 FastAPI/Uvicorn 의존을 가져선 안 된다 (ADR-020).
# 디버그 REST는 packages/krtour-map-admin/(import: `krtour.map_admin`)에 있다.
[[tool.importlinter.contracts]]
name = "main package must not import fastapi/uvicorn"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "fastapi",
  "uvicorn",
  "starlette",
]

# ADR-030: 라이브러리 in-memory 캐시 금지. functools.cache 한정 narrow 예외만 허용.
# 외부 캐시 라이브러리 의존 금지 — invalidation 책임 호출자(TripMate)에 위임.
# 예외: PlaceCategoryCode 카탈로그 (krtour.map.category), pyproj.Transformer singleton.
[[tool.importlinter.contracts]]
name = "main package must not depend on cache libraries"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "cachetools",
  "async_lru",
  "aiocache",
  "diskcache",
]

# ADR-103 (T-103 보류): 본 라이브러리는 Kafka/streaming consumer 의존 금지.
# streaming 도입 시 consumer는 TripMate apps/etl가 담당. 본 라이브러리는 함수만.
[[tool.importlinter.contracts]]
name = "main package must not depend on kafka/streaming libraries"
type = "forbidden"
source_modules = [
  "krtour.map",
]
forbidden_modules = [
  "kafka",
  "aiokafka",
  "confluent_kafka",
  "faust",
]
