[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kor-travel-map"
version = "0.2.0-dev"
description = "TripMate map feature aggregation and CRUD contracts (v2 design stage)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "digitie" }]
keywords = ["tripmate", "map", "features", "korea", "travel", "postgis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
# v2 설계 단계 — dependencies는 코드 작성 단계에서 ADR과 함께 확정.
# 아래는 ADR-007/008/...에서 합의된 1차 스택의 placeholder.
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "geoalchemy2>=0.15",
  "asyncpg>=0.29",
  "psycopg[binary,pool]>=3.2",
  "shapely>=2.0",
  "pyproj>=3.6",  # ADR-012 좌표 변환 / ADR-030 narrow cache singleton
  "alembic>=1.13",  # ADR-007 schema migration
  "jellyfish>=1.0",  # ADR-016 Record Linkage (jaro_winkler_similarity)
  "boto3>=1.34",  # ADR-015 S3 호환 객체 저장소(RustFS/MinIO/R2)
]

# CLI entry-point (ADR-054 — 명령 이름 `ktmctl`, ADR-039 mutex).
[project.scripts]
ktmctl = "kortravelmap.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "import-linter>=2.0",
  "pre-commit>=3.7",
  "testcontainers[postgres]>=4",
  "vcrpy>=6",
  "coverage>=7",
  # geocoding.py는 httpx를 TYPE_CHECKING-only로 import (런타임 의존 아님,
  # 호출자 주입 — ADR-006/044). mypy --strict가 stub를 찾도록 dev에만 둔다.
  "httpx>=0.27",
]
# 디버그 REST API/UI는 별도 패키지로 분리 (ADR-020):
#   `packages/kor-travel-map-admin/`. FastAPI/Uvicorn 의존성은 거기 있다.
geo = [
  "geopandas>=1.0",
  "gdal==3.8.4",  # Python binding은 시스템 libgdal ABI와 patch 버전까지 맞춤
]
providers = [
  # provider 라이브러리는 git URL + commit sha 핀 (코드 작성 단계에서 ADR과 함께 확정).
  # 본 라이브러리는 wrapper/adapter 생성 금지 (ADR-006) — provider client 직접 사용.
  # 본 라이브러리 코드에서는 `Protocol`로 입력 shape만 정의 (모듈별 docstring 참조).
  # 상세 status는 `docs/provider-contract.md` §12 표.
  #
  # ── note: `python-kraddr-base`는 ADR-041 (PR#37) 흡수 완료 + archive 후보.
  #    본 lib에 의존성 없음. ─────────────────────────────────────────────────────
  #
  # ── 주소/좌표 보강 (on-demand) ─────────────────────────────────────────
  # "kor-travel-geo @ git+https://github.com/digitie/kor-travel-geo.git@<sha>",
  #
  # ── Sprint 2 §2.1 — datagokr 표준데이터 (축제 1차, ADR-042) ────────────
  # `kortravelmap.providers.standard_data.CulturalFestivalItem` Protocol (PR#34) 정합.
  # 26a5be3: 주차장 basicTime/addUnitTime 분수값(float) 허용 (provider #6/PR#7,
  # T-212e live 실측 addUnitTime='0.5').
  # 1967fb6: 주차장 요금/수치 int 필드 관용 파싱 — 자유 표기('200+400')는 None,
  # 원문은 raw 보존 (provider #8/PR#9, T-212e live 실측 addUnitCharge='200+400').
  # 48e458b: curated source 보강(T-223b) — fileData 4종 + 전국지역특화거리
  # 표준데이터 service/model 추가(provider PR#10).
  "python-datagokr-api @ git+https://github.com/digitie/python-datagokr-api.git@48e458b1f06656a94474f9b08e87cefc3c9c9526",
  #
  # ── Sprint 2 §2.2 — 날씨 (ADR-010) ────────────────────────────────────
  # `kortravelmap.providers.kma.{KmaShortForecastItem, KmaUltraShortNowcastItem}`
  # Protocol (PR#38/39) 정합. T-219b: Dagster asset이 KmaClient/grid/time_utils
  # 를 lazy import — runtime 의존 활성화. 006fdbe: datagokr result code 03
  # (NO_DATA)을 예외 대신 빈 결과로 정규화 (provider #18/PR#19 — T-212e 특보
  # rolling window 빈 구간 대응). 2592b740: 중기예보 응답이 tmFc를 에코하지
  # 않아 MidForecastItem.tm_fc가 항상 None → 해석된 요청 tmFc 폴백 주입
  # (provider #20/PR#21, T-212e mid forecast run f044b091 실측).
  "python-kma-api @ git+https://github.com/digitie/python-kma-api.git@2592b740c1f7ab255dadcc313f1f6422deb63cc4",
  "python-airkorea-api @ git+https://github.com/digitie/python-airkorea-api.git@22996a457fa2c845101b0bbbf8167e655e8d562d",
  # khoa: snake_case live row 파싱 (khoa#5/PR#6).
  "python-khoa-api @ git+https://github.com/digitie/python-khoa-api.git@0ccb5ed90da5886a2d346b33f1019efd2719e0bc",
  # python-krforest-api는 산악기상 + Sprint 3 trails 양쪽 사용 (아래 §2.5와 동일 lib).
  #
  # ── Sprint 2 §2.3 — opinet 유가 (place + price) ───────────────────────
  "python-opinet-api @ git+https://github.com/digitie/python-opinet-api.git@bb6385caebe204b781a3ba9544efa04d5fe68671",
  #
  # ── Sprint 2 §2.4 — krex 휴게소 (multi-kind) ──────────────────────────
  # krex: incident → openapi/burstInfo/realTimeSms 재정렬 (krex PR#9, #378).
  "python-krex-api @ git+https://github.com/digitie/python-krex-api.git@2504a3608dec7535ec32ce983d13d5cbc1da27ae",
  #
  # ── Sprint 2 §2.1 (enrichment 2차, ADR-042) ───────────────────────────
  # visitkorea TourAPI는 datagokr 1차 source의 enrichment (image/description/
  # contentId 매핑) 책임 — Sprint 2 끝물 PR.
  "python-visitkorea-api @ git+https://github.com/digitie/python-visitkorea-api.git@cebf543d331423910cf7d2748c022665e538c201",
  #
  # ── Sprint 3 — knps / krforest_trails / krheritage / krairport ────────
  # python-knps-api: keyless file dataset client (ADR-028 + amendment 2026-05-25).
  # PR#4 (codex/keyless-file-download-dtos) merged → ApiEndpoint/Page 삭제,
  # KNPS_SERVICE_KEY 사용 안 함. sha 5e88fb4.
  # `kortravelmap.providers.knps.KnpsPointRecord` Protocol (Point/place 5 dataset
  # 구현됨). SHP(area)/route는 후속. 다른 provider처럼 본 lib 본 의존 X (Protocol).
  # 16e3954: trails vertex 행 → 코스 단위 LINESTRING 조립(provider #9/PR#10,
  # T-212e 실측 — knps_trails 적재 0건(#407) 해소, 910,110 vertex → 625 코스).
  "python-knps-api @ git+https://github.com/digitie/python-knps-api.git@16e395463e9ae510e1c484bfa00be3fc486af082",
  "python-krforest-api @ git+https://github.com/digitie/python-krforest-api.git@f9254e6bbb54f0a4f0fb7d85831f9adcdc318a3f",
  # 6076b52: 목록 응답 result 레벨 복합키/좌표 병합(live detail 100% 실패 수정)
  # + 결측 key row skip (provider #5/PR#6, T-212e live 실측).
  "python-krheritage-api @ git+https://github.com/digitie/python-krheritage-api.git@6076b523fac9226d365136518db4d219cb6339c6",
  "python-krairport-api @ git+https://github.com/digitie/python-krairport-api.git@b8854137f26be4ae14c1693b83b425ee37c60655",
  #
  # ── Sprint 4 — MOIS 인허가 4단계 (ADR-024) ────────────────────────────
  "python-mois-api @ git+https://github.com/digitie/python-mois-api.git@bc6f742feb8b6e28c9b889aa71a4cac9c489091c",
  # "python-kasi-api     @ git+https://github.com/digitie/python-kasi-api.git@<sha>",
  #
  # ── Sprint 5 — 박물관/미술관 / mcst enrichment / standard data ────────
  # T-220 재배선(#395): provider가 CSV 파일 다운로드 주경로로 재편(provider
  # #6/#7) — Dagster fetcher가 keyless FileDataClient를 lazy import.
  # 핀 c011f6e = 카탈로그 재편(#7) + 빈 params query 박탈 수정(#9) +
  # 중고서점 OpenAPI/CSV 보강(T-223b, provider PR#11) 포함.
  "python-mcst-api @ git+https://github.com/digitie/python-mcst-api.git@c011f6e821938a9eab81ac219493ddc0d3fbe5c5",
  # data.go.kr-standard 6종 + curated fileData 4종은 본 라이브러리 +
  # python-datagokr-api 경유 (ADR-042/T-223b).
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# T-226 clean cut: top-level package `kortravelmap`.
include = ["kortravelmap*"]
namespaces = true

[tool.setuptools.package-data]
"kortravelmap" = ["py.typed"]

# =============================================================================
# Lint / Type / Test
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "PIE", "PT", "RET", "SIM", "TID"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
# T-226 — kortravelmap은 top-level package다.
# mypy_path에 main/admin/dagster src 트리를 모두 등록.
explicit_package_bases = true
mypy_path = "src:packages/kor-travel-map-admin/src:packages/kor-travel-map-dagster/src"

# shapely는 type stub를 제공하지 않음 (pyproj와 달리 py.typed 없음).
# core/geometry.py가 WKT 파싱·centroid에 사용 — import-untyped만 무시.
[[tool.mypy.overrides]]
module = ["shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "src",
  "packages/kor-travel-map-admin/src",
  "packages/kor-travel-map-dagster/src",
]
asyncio_mode = "auto"
# session-scope async fixture (pg_engine)와 function-scope async test가 동일
# event loop을 공유해야 함 — pytest-asyncio 0.23+ 권장 설정. 미설정 시 testcontainers
# PostGIS 통합 테스트에서 "Task got Future attached to a different loop" 발생.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "unit: 단위 테스트 — DB 없이 Fake repo만",
  "integration: 통합 테스트 — testcontainers PostGIS 필요",
  "e2e: 디버그 API + integration DB",
  "slow: 느린 테스트 (CI nightly only)",
  "fixture_replay: replay fixture 회귀",
  "live: 외부 라이브 서비스 호출(예: kor-travel-geo). 도달 불가 시 자동 skip.",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.coverage.run]
source = ["src/kortravelmap"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
fail_under = 80  # ADR-032 Sprint 4 bar (75→80 상향, 2026-06-01 Sprint 4b 종료). 실측 94.12%.
# ADR-032 Sprint별 fail_under schedule:
#   Sprint 1 (scaffolding):  fail_under = 50
#   Sprint 2 (core + 4 provider): 65
#   Sprint 3 (provider 절반 + infra): 75
#   Sprint 4 (integrity + edge cases): 80   ← 현재 (실측 94.12%라 무위험 상향, Sprint 4b)
#   Sprint 5 (operational entry): 80 유지 + 회귀 방지
# 단계 상향 PR은 반드시 coverage gap 해소 PR과 묶음 (red main 0회).
# dto/는 Sprint 2부터 100% branch 항상 강제 (별도 [tool.coverage.report.partial_branches]).

# =============================================================================
# import-linter (의존 계층 강제) — 코드 작성 단계 시작 시 활성화
# =============================================================================

[tool.importlinter]
root_package = "kortravelmap"
# forbidden contracts에 외부 패키지가 포함됨 (fastapi/uvicorn/cachetools/kafka).
include_external_packages = true

[[tool.importlinter.contracts]]
name = "layered architecture"
type = "layers"
# 의존 방향: category → dto → core → infra → providers → geocoding → client → cli.
# kortravelmap.cli는 Sprint 4 §2.8(ADR-039 CLI mutex)에서 추가 — 최상위 layer.
layers = [
  "kortravelmap.cli",
  "kortravelmap.client",
  "kortravelmap.providers",
  "kortravelmap.geocoding",
  "kortravelmap.infra",
  "kortravelmap.core",
  "kortravelmap.dto",
  "kortravelmap.category",
]

# 메인 패키지(kortravelmap)는 FastAPI/Uvicorn 의존을 가져선 안 된다 (ADR-020).
# 디버그 REST는 packages/kor-travel-map-admin/(import: `kortravelmap.admin`)에 있다.
[[tool.importlinter.contracts]]
name = "main package must not import fastapi/uvicorn"
type = "forbidden"
source_modules = [
  "kortravelmap",
]
forbidden_modules = [
  "fastapi",
  "uvicorn",
  "starlette",
]

# ADR-030: 라이브러리 in-memory 캐시 금지. functools.cache 한정 narrow 예외만 허용.
# 외부 캐시 라이브러리 의존 금지 — invalidation 책임 호출자(TripMate)에 위임.
# 예외: PlaceCategoryCode 카탈로그 (kortravelmap.category), pyproj.Transformer singleton.
[[tool.importlinter.contracts]]
name = "main package must not depend on cache libraries"
type = "forbidden"
source_modules = [
  "kortravelmap",
]
forbidden_modules = [
  "cachetools",
  "async_lru",
  "aiocache",
  "diskcache",
]

# ADR-103 (T-103 보류): 본 라이브러리는 Kafka/streaming consumer 의존 금지.
# streaming 도입 시 consumer는 TripMate apps/etl가 담당. 본 라이브러리는 함수만.
[[tool.importlinter.contracts]]
name = "main package must not depend on kafka/streaming libraries"
type = "forbidden"
source_modules = [
  "kortravelmap",
]
forbidden_modules = [
  "kafka",
  "aiokafka",
  "confluent_kafka",
  "faust",
]
